feat: kpi dashboard with all kpis

--- a/src/pages/living-lab-city/[labId].astro
+++ b/src/pages/living-lab-city/[labId].astro
@@ -1,7 +1,6 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import ApiClient from "../../lib/api-client/ApiClient";
-import { KpiCard } from "../../components/react/KpiCards";
 import { MapViewer } from "../../components/react/MapViewer";
 import { TransportBadge } from "../../components/react/TransportBadge";
 import ModalSplitChart from "../../components/react/KpiCards/ModalSplitChart";
@@ -12,14 +11,16 @@ import {
   prepareModalSplitData,
   createMapMarker,
 } from "../../lib/helpers/living-lab";
-import { DataDisplayCard } from "../../components/react";
+import { DataDisplayCard, LivingLabKPIsView } from "../../components/react";
+import type { IIKpiResultBeforeAfter } from "../../types";
 
 const api = new ApiClient();
 
 const { labId } = Astro.params;
 const livingLabData = await api.getLivingLabAndData(Number(labId));
 const allTransportModes = await api.getTransportModes();
-const allMeasures = await api.getMeasures();
+const allKpis = await api.getKPIs();
+const categories = await api.getCategories("KPI_SIEF");
 
 // Prepare data for components
 const nsmTransportModes = getNSMTransportModes(
@@ -29,15 +30,23 @@ const nsmTransportModes = getNSMTransportModes(
 const { pushMeasures, pullMeasures } = separateMeasures(
   livingLabData.measures || []
 );
-const { beforeData, afterData } = prepareModalSplitData(
+const { before, after } = prepareModalSplitData(
   livingLabData,
   allTransportModes
 );
+
 const mapMarker = createMapMarker(livingLabData);
+
+const kpiResultsByCategory = categories.map((category) => ({
+  ...category,
+  kpiResults: livingLabData?.kpi_results.filter((kpiResult) =>
+    category.kpis?.some((kpi) => kpi.id === kpiResult.id)
+  ),
+}));
 ---
 
 <Layout>
-  <div class="lg:mx-20 mx-auto px-4 py-8 flex flex-col gap-8">
+  <div class="lg:mx-10 mx-auto px-1 py-4 flex flex-col gap-8">
     <h2>
       <strong>{livingLabData?.name}</strong> Living lab data dashboard
     </h2>
@@ -78,13 +87,13 @@ const mapMarker = createMapMarker(livingLabData);
       </div>
     </section>
 
-    <div class="flex flex-col gap-8 lg:flex-row">
+    <div class="flex flex-col gap-8">
       <!-- Transport Modes Section -->
       {
         nsmTransportModes.length > 0 && (
           <div class="flex flex-col gap-4">
-            <h3>Shared Mobility Services</h3>
-            <div class="flex flex-wrap gap-2">
+            <h3 class="text-center">Shared Mobility Services</h3>
+            <div class="flex flex-wrap gap-2 mx-auto">
               {nsmTransportModes.map((mode) => (
                 <TransportBadge
                   name={mode.name}
@@ -100,30 +109,28 @@ const mapMarker = createMapMarker(livingLabData);
       <!-- Push & Pull Measures Section -->
       {
         (pushMeasures.length > 0 || pullMeasures.length > 0) && (
-          <section class="flex flex-col gap-4">
-            <div class="flex flex-col lg:flex-row gap-8 items-start">
-              <MeasuresSection
-                heading="🔴 Push measures"
-                smallText={``}
-                paragraph={``}
-                measures={pushMeasures}
-                hideDescription={true}
-                cols={1}
-                style="list"
-                client:load
-              />
+          <section class="flex flex-col md:flex-row gap-8 items-start">
+            <MeasuresSection
+              heading="🔴 Push measures"
+              smallText={``}
+              paragraph={``}
+              measures={pushMeasures}
+              hideDescription={true}
+              cols={1}
+              style="list"
+              client:load
+            />
 
-              <MeasuresSection
-                heading="🟢 Pull measures"
-                smallText={``}
-                paragraph={``}
-                measures={pullMeasures}
-                hideDescription={true}
-                cols={1}
-                style="list"
-                client:load
-              />
-            </div>
+            <MeasuresSection
+              heading="🟢 Pull measures"
+              smallText={``}
+              paragraph={``}
+              measures={pullMeasures}
+              hideDescription={true}
+              cols={1}
+              style="list"
+              client:load
+            />
           </section>
         )
       }
@@ -131,20 +138,14 @@ const mapMarker = createMapMarker(livingLabData);
 
     <!-- Modal Split Section -->
     {
-      (beforeData.length > 0 || afterData.length > 0) && (
+      (before?.data?.length > 0 || after?.data?.length > 0) && (
         <section class="flex flex-col gap-4">
           <h3 class="text-center">Modal Split</h3>
           <p>
             Distribution of transport modes usage before and after measures:
           </p>
           <div class="bg-white p-6 rounded-lg shadow-md">
-            <ModalSplitChart
-              data={[
-                { label: "Before", data: beforeData },
-                { label: "After", data: afterData },
-              ]}
-              client:load
-            />
+            <ModalSplitChart data={[before, after]} client:load />
           </div>
         </section>
       )
@@ -153,13 +154,16 @@ const mapMarker = createMapMarker(livingLabData);
     <!-- KPIs Section -->
     <section class="flex flex-col gap-4">
       <h3 class="text-center">Key Performance Indicators (KPIs)</h3>
-      <p>Explore the KPIs related to the living lab.</p>
-      <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-        {
-          livingLabData?.kpi_results.map((kpiResult) => (
-            <KpiCard kpiResults={kpiResult} client:load />
-          ))
-        }
+      <p>
+        Explore living lab metrics and track progress of the impact of
+        shared-mobility integration.
+      </p>
+      <div class="flex flex-wrap gap-0">
+        <LivingLabKPIsView
+          categories={kpiResultsByCategory}
+          kpis={allKpis}
+          client:load
+        />
       </div>
     </section>
   </div>
